4/9/12 when point tool is outside grid, don't snap and don't display coordinates
4/9/12 change rendering order of line types: interactive, saved, standard
4/9/12 convert graph and components to use absolute coordinates instead of deltas for mvt
4/9/12 separate layout and positioning of graph
4/9/12 constrain point tool to stage bounds
4/9/12 separate point tool from graph
4/9/12 make mvt apply to entire canvas, not just the graph
4/6/12 make slope (rise over run) brackets visible by default, since AP feels strongly that they should always be visible
4/6/12 use SettableNot to invert linesVisible property
4/6/12 flatten line graph hierarchy, to provide control over rendering order for the different categories of lines
4/6/12 generalize workaround for toImage clipping, move to piccolo-phet (PadBoundsNode)
4/6/12 when "Hide Lines" is unchecked, disable related controls: y=x, y=-x, Slope
4/6/12 change "Slope" check box icon to show both rise and run, connect ends of brackets with dashed line
4/6/12 delete "Point Tool" check box, make it always visible
4/6/12 remove dependency between interactive line controls and graph
4/6/12 when run=0, don't hide interactive equation, show equation as "slope undefined" on graphed line
4/6/12 change "Lines" check box to "Hide Lines", invert semantics of associated property, remove check box icon
4/5/12 increase icons size for standard lines, change labels to "y=x" and "y=-x"
4/5/12 change "Rise/Run" check box to "Slope"
4/5/12 remove title from graph control panel
4/5/12 use larger font for equations in graph
4/5/12 structure scenegraph of control panel so that it's easier to minimize and maximize
4/5/12 remove control panel title background, add horizontal strut to prevent resizing when minimized
4/5/12 remove y=+x and y=-x lines from the model
4/5/12 specify line extents in view units
4/5/12 fix model-view transforms used in grid creation
4/5/12 constants to make model easier to adjust